Prevent the .panel-tabs from jumping in vertical position (#14)

--- a/frontend/src/style/annotate.sass
+++ b/frontend/src/style/annotate.sass
@@ -1,8 +1,10 @@
 .categoryPickerWrapper
-    .modal-content
-        min-height: 150px
+    .modal
+        justify-content: flex-start
+        padding-top: 10%
     .panel-tabs
         flex-wrap: wrap
+        justify-content: flex-start
 
 .anno
     position: relative
